fix: Ensure Java servers are invoked on the specified execution context (#2082)